--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   google_fonts: ^3.0.1
   provider: ^6.0.5
   rive: 0.8.1
+  anim_search_bar: ^2.0.3
+  
+  http: ^0.13.5
+  simple_candlestick_chart: ^0.1.0
+  get: ^4.6.5
+  animated_text_kit: ^4.2.2
+  google_sign_in: ^5.4.4
+    
          
 
 dev_dependencies:
