--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   get: ^4.6.5
   animated_text_kit: ^4.2.2
   google_sign_in: ^5.4.4
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
     
          
 
@@ -94,8 +96,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/splashScreen.png
-    - assets/RiveAssets/tree_loading_bar.riv
-    - assets/RiveAssets/sidebar.riv 
+    - assets/Ambuja_logo.png
+    - assets/tatasteel.jpg
+    - assets/Yes_Bank_logo.png
+    - assets/zomato.png
+     
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
