--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dependencies:
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
   syncfusion_flutter_charts: ^20.4.51
+  intl: ^0.17.0
+  connectivity_plus: ^3.0.3
+  range_slider_flutter: ^0.0.2
+  socket_io_client: ^2.0.1
+  web_socket_channel: ^2.3.0
     
          
 
@@ -107,6 +112,8 @@ flutter:
     - assets/tatasteel.jpg
     - assets/Yes_Bank_logo.png
     - assets/zomato.png
+    - assets/triangle.png
+
      
 
   # An image asset can refer to one or more resolution-specific "variants", see
