--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   range_slider_flutter: ^0.0.2
   socket_io_client: ^2.0.1
   web_socket_channel: ^2.3.0
+  fl_chart: ^0.61.0
     
          
 
@@ -113,6 +114,18 @@ flutter:
     - assets/Yes_Bank_logo.png
     - assets/zomato.png
     - assets/triangle.png
+    - assets/bob.png
+    - assets/icici.png
+    - assets/kotak.png
+    - assets/paytm.png
+    - assets/sbi.png
+    - assets/GAIL.png
+    - assets/Cipla.png
+    - assets/ultraTechCement.png
+    - assets/Nykaa_Logo.png
+    - assets/icol.png
+    - assets/hdfc.png
+   
 
      
 
