--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   socket_io_client: ^2.0.1
   web_socket_channel: ^2.3.0
   fl_chart: ^0.61.0
+  page_animation_transition: ^0.0.9
     
          
 
