--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   web_socket_channel: ^2.3.0
   fl_chart: ^0.61.0
   page_animation_transition: ^0.0.9
+  syncfusion_flutter_core: ^20.4.52
+  syncfusion_flutter_gauges: ^20.4.52
+  syncfusion_flutter_sliders: ^20.4.52
     
          
 
@@ -126,6 +129,9 @@ flutter:
     - assets/Nykaa_Logo.png
     - assets/icol.png
     - assets/hdfc.png
+    - assets/nippon.png
+    - assets/quant.png
+    - assets/axisbank.png
    
 
      
