--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,6 +26,7 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
@@ -67,6 +68,51 @@ jobs:
           body: "Niwas Decor debug release - ${{ github.event.inputs.version }}"
           draft:
           prerelease: 
+
+      - name: Upload APK to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/app/outputs/flutter-apk/app-debug.apk
+          asset_name: niwas-decor-debug.apk
+          asset_content_type: application/vnd.android.package-archive
+          name: Build debug APK and create Release
+
+on:
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version tag (e.g. v1.0.0)'
+        required: true
+        default: 'v1.0.0'
+
+jobs:
+  build-and-release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: stable
+
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Build debug APK
+        run: flutter build apk --debug --no-shrink
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.event.inputs.version }}
+          release_name: ${{ github.event.inputs.version }}
+          body: "Niwas Decor debug release - ${{ github.event.inputs.version }}"
+          draft: false
+          prerelease: false
 
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
